# seismometer

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  mpu-6500.cpp  mpu-6500.hpp  seismometer.cpp  seismometer_types.hpp
data_collector/: CMakeLists.txt
data_collector/filter/: fir.m  lpf.m  octave-workspace
data_collector/inc/: adc_manager.hpp  at24c_eeprom.hpp  filter_coefficients.hpp  fir_filter.hpp  mpu-6500.hpp  rtc_ds3231.hpp  sample_handler.hpp  sampler.hpp  sd_card_spi.hpp  seismometer_config.hpp  seismometer_debug.hpp  seismometer_eeprom.hpp  seismometer_i2c.hpp  seismometer_types.hpp  seismometer_utils.hpp
data_collector/src/: adc_manager.cpp  at24c_eeprom.cpp  filter_coefficients.cpp  fir_filter.cpp  mpu-6500.cpp  rtc_ds3231.cpp  sample_handler.cpp  sampler.cpp  sd_card_spi.cpp  seismometer.cpp  seismometer_eeprom.cpp
inc/: mpu-6500.hpp  sample_handler.hpp  sampler.hpp  seismometer_config.hpp  seismometer_types.hpp  seismometer_utils.hpp
monitor/: data_collector_parser.py  parser.py  sample_database.py  seismometer_monitor.py
pcb/seismometer/: fp-lib-table  micro_sd_spi.kicad_sch  seismometer.kicad_prl  seismometer.kicad_pro  seismometer.kicad_sch  solenoid_amplifier.kicad_sch  sym-lib-table
src/: mpu-6500.cpp  sample_handler.cpp  sampler.cpp  seismometer.cpp
